Mouseover highlight squished fix - #4574

--- a/static/scss/final-exam-card.scss
+++ b/static/scss/final-exam-card.scss
@@ -81,6 +81,10 @@
         display: flex;
         justify-content: space-between;
 
+        .vertical-center {
+          align-self: center;
+        }
+
         .address {
           display: flex;
           flex-direction: column;
